bootstrap admin layout

--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -1,8 +1,10 @@
 //@import "_normalize.scss";
 //@import "_foundation.scss";
+@import "settings";
 @import "bootstrap";
 //@import "partials/icons";
 //@import "partials/_reset";
+/*
 @import "partials/_functions";
 @import "partials/_mixins";
 @import "partials/_font";
@@ -10,7 +12,16 @@
 @import "partials/_ng-form";
 @import "partials/icons";
 @import "partials/svg-loading";
-//@import "partials/_preload";
+@import "partials/navbar";
+@import "partials/main";
+@import "partials/body";
+*/
+@import "partials/body";
+@import "partials/main";
+@import "partials/navbar";
+@import "partials/footer";
+@import "partials/ng-animate";
+@import "partials/svg-loading";
 //@import "_app";
 //@import "partials/_debug";
 
