--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -22,6 +22,7 @@
 @import "partials/footer";
 @import "partials/ng-animate";
 @import "partials/svg-loading";
+@import "partials/login";
 //@import "_app";
 //@import "partials/_debug";
 
