--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -1,3 +1,8 @@
 $navbar-height: 120px;
 $footer-height: 60px;
 $icon-font-path : '../font/';
+/*
+$border-radius-base:        0px;
+$border-radius-large:       0px;
+$border-radius-small:       0px;
+*/
